fixed typo in .tex

--- a/Written_Tutorial_for_Project.tex
+++ b/Written_Tutorial_for_Project.tex
@@ -36,7 +36,7 @@ A differential equation is a mathematical equation in which an unknown function 
 \Large
 \textbf{What kind of PDEs can the PDE toolbox solve?} \par
 \normalsize
-There basic PDE solved by the PDE tool box is the equation
+The basic PDE solved by the PDE tool box is the equation
 \begin{equation}
 -\raisebox{.4ex}{$\bigtriangledown$} \cdot (c \raisebox{.4ex}{$\bigtriangledown$} u) + a u = f   \label{E:ellip} 
 \end{equation}
