Edited README via GitHub

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
-This is our repo for our final project for CS177 at Brandeis University.  OUr project is titled A Brief Tutorial of the MATLAB PDE Toolbox.  Below is our final written project in several formats.  For more information on our final project check out the website https://sites.google.com/a/brandeis.edu/cs177-final-project/
+This is our repo for our final project for CS177 at Brandeis University.  OUr project is titled A Brief Tutorial of the MATLAB PDE Toolbox.  Below is our final written project in several formats.  For more information on our final project check out the website 
+
+https://sites.google.com/a/brandeis.edu/cs177-final-project/
+
+Also check out our video tutorial on the MATLAB PDE Toolbox
+
+http://www.youtube.com/watch?v=qfu820n-Ypw
 
 - Iain Crosby, Noah Ruderman, Taha B
